# 15-PersonnelApi/src/controllers/department.controller.js
@@ -6,24 +6,6 @@ const Department = require("../models/department.model");
 
 module.exports = {
   list: async (req, res) => {
-    /*
-            #swagger.tags = ['Departments']
-            #swagger.summary = 'List Departments'
-            #swagger.description = `You can send query with endpoint for search[], sort[], page and limit.
-            <ul> Examples:
-                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
-                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
-                <li>URL/?<b>page=2&limit=1</b></li>
-            </ul>`
-            #swagger.parameters['body'] = {
-                in: 'body',
-                required: true,
-                schema: {
-                    username: '*String',
-                    password: '*String',
-                }
-            }
-        */
     const data = await res.getModelList(Department);
 
     res.status(200).send({
@@ -34,17 +16,6 @@ module.exports = {
   },
 
   create: async (req, res) => {
-  /* 
-   #swagger.tags = ["Departments"]
-        #swagger.summary = "Create Department"
-        #swagger.parameters['body'] = {
-            in: 'body',
-            required: true,
-            schema: {
-                $ref: '#/definitions/Department'
-            }
-        }
-  */
     const data = await Department.create(req.body);
     res.status(201).send({
       error: false,
