# 17_PersonnelApi_Logs_Documents/src/controllers/auth.controller.js
@@ -14,6 +14,19 @@ const passwordEncrypt = require('../helpers/passwordEncrypt')
 module.exports = {
 
     login: async (req, res) => {
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username and password'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: '*String',
+                    password: '*String',
+                }
+            }
+        */
 
         const { username, password } = req.body
 
@@ -61,6 +74,13 @@ module.exports = {
     },
 
     logout: async (req, res) => {
+
+           /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token'
+            
+        */
 
         // Token Delete:
         // if(req.user) {
